# the-luggage

./: .dockerignore  README.md  manage.py  package-lock.json  pyproject.toml
apps/api/views/: status.py
apps/core/: admin.py  jobs.py
apps/web/: urls.py
conf/: luggage.service  supervisor.conf
luggage/: asgi.py  urls.py  wsgi.py
luggage/settings/: base.py
templates/_layout/: base.html  skeleton.html
