[tool.poetry]
name = "the-luggage"
version = "0.1.0"
description = "The Luggage file storage"
authors = [
    "Jakub Dubec <jakub.dubec@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4"
python-dotenv = "^0"
argon2-cffi = "^21.0.0"
sentry-sdk = "^1"
psycopg2 = "^2.9"
django-bootstrap-v5 = "^1.0.11"
Markdown = "^3.4.1"
python-crontab = "^2.7.1"
porcupine-python = "^0.5.0"
django-api-forms = "1.0.0rc7"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
